deployment/networking/chisel/chisel-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chisel-virtualservice
spec:
  hosts:
  - "chisel.oss"
  gateways:
  - chisel-gateway
  http:
  - route:
    - destination:
        host: chisel-server-service.chisel.svc.cluster.local
        port:
          number: 8080
